[package]
name = "liftoff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlBodyElement", "DomTokenList", "CssStyleDeclaration", "console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
